tests/typerel/ttypedesc_as_genericparam1.nim
discard """
  line: 6
  errormsg: "type mismatch: got (typedesc[int])"
"""
# bug #3079, #1146
echo repr(int)
